--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>se.kawi</groupId>
 	<artifactId>Quote-Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>Quote-Service</name>
 	<description>Demo project for Spring Boot</description>
